syntax = "proto3";
package corepb;
import "transaction.proto";

option java_package = "com.dappley.android.sdk.protobuf";
option java_outer_classname = "BlockProto";

message Block{
    BlockHeader Header = 1;
    repeated Transaction Transactions = 2;
    bytes parentHash = 3;
}

message BlockHeader{
    bytes Hash = 1;
    bytes Prevhash = 2;
    int64 Nonce = 3;
    int64 Timestamp = 4;
    bytes Sign = 5;
    uint64 Height = 6;
}